aprs-tracker/dc.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  labels:
    app: aprs-tracker
  name: aprs-tracker
  namespace: wp-lorawan
spec:
  replicas: 1
  selector:
    app: aprs-tracker
    deploymentconfig: aprs-tracker
  strategy:
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: aprs-tracker
        deploymentconfig: aprs-tracker
    spec:
      containers:
      - image: wp-lorawan/aprs-tracker:latest
        imagePullPolicy: Always
        name: aprs-tracker
        ports:
        - containerPort: 3000
          protocol: TCP
        resources:
          limits:
            cpu: 250m
            memory: 250Mi
          requests:
            cpu: 250m
            memory: 250Mi
        livenessProbe:
          httpGet:
            path: /healthz
            port: 3000
            scheme: HTTP
          initialDelaySeconds: 30
          timeoutSeconds: 1
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /healthz
            port: 3000
            scheme: HTTP
          initialDelaySeconds: 15
          timeoutSeconds: 1
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
        terminationMessagePath: /dev/termination-log
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      securityContext: {}
      terminationGracePeriodSeconds: 30
  test: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - aprs-tracker
      from:
        kind: ImageStreamTag
        name: aprs-tracker:latest
        namespace: wp-lorawan
    type: ImageChange
